[gd_scene load_steps=25 format=2]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://scenes/gun.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/health.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/healthBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/fonts/Azonix.otf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/icons/pngwing.com (3).png" type="Texture" id=6]
[ext_resource path="res://assets/icons/pngwing.com (5).png" type="Texture" id=7]
[ext_resource path="res://assets/audio/slowmotioneffect3s.wav.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/audio/grappling_enabled.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/audio/shoot.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/icons/magic_03.png" type="Texture" id=11]
[ext_resource path="res://assets/icons/iconfinder_gun__pistol__weapon__security_2542021.png" type="Texture" id=12]
[ext_resource path="res://assets/audio/gun_tic.wav" type="AudioStream" id=13]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5
height = 1.5

[sub_resource type="CapsuleMesh" id=2]
radius = 0.5
mid_height = 1.5

[sub_resource type="CapsuleMesh" id=3]
radius = 0.5

[sub_resource type="DynamicFont" id=4]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_bottom = -3
extra_spacing_char = 3
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_bottom = -3
extra_spacing_char = 3
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_bottom = -3
extra_spacing_char = 3
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_bottom = -3
extra_spacing_char = 3
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=8]
size = 100
outline_size = 14
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_char = 11
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=9]
size = 156
outline_size = 16
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_char = 3
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=10]
size = 21
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_bottom = -3
extra_spacing_char = 3
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=11]
size = 23
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_bottom = -3
extra_spacing_char = 3
font_data = ExtResource( 5 )

[node name="player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="collision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.127, 0 )

[node name="Camera" type="Camera" parent="head"]

[node name="arm" type="MeshInstance" parent="head/Camera"]
transform = Transform( 0.390354, 0, -0.0876386, 0, 0.348987, 0, 0.0380842, 0, 0.761167, 0.652876, -0.748932, -0.674805 )
mesh = SubResource( 3 )
material/0 = null

[node name="RayCast" type="RayCast" parent="head/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -1000 )

[node name="gun" parent="head/Camera" instance=ExtResource( 2 )]
transform = Transform( -8.14603e-08, 0, 0.5, 0, 0.5, 0, -0.5, 0, -8.14603e-08, 0.683239, -0.504928, -1.52916 )

[node name="ColorRect" type="ColorRect" parent="head/Camera"]
light_mask = 4
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2.5
margin_top = -2.5
margin_right = 2.5
margin_bottom = 2.5
rect_rotation = -44.9999
rect_pivot_offset = Vector2( 2.5, 2.5 )
color = Color( 0.996078, 0.0117647, 0.0117647, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="aim" type="Sprite" parent="head/Camera/ColorRect"]
self_modulate = Color( 0, 0, 0, 1 )
rotation = 0.785398
scale = Vector2( 0.03, 0.03 )
texture = ExtResource( 11 )
offset = Vector2( 118.952, 0 )

[node name="Checkmouse1" type="Panel" parent="head/Camera"]
modulate = Color( 0.933333, 0.898039, 0.898039, 1 )
self_modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -116.0
margin_top = 244.984
margin_right = 116.0
margin_bottom = 268.984
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Checkmouse" type="Label" parent="head/Camera/Checkmouse1"]
margin_right = 232.0
margin_bottom = 24.0
text = "press enter to capture mouse"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Panel" type="Panel" parent="head/Camera"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -248.0
margin_right = 243.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="head/Camera/Panel"]
margin_right = 243.0
margin_bottom = 32.0
text = "Press ENTER to capture mouse aim"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="head/Camera/Panel"]
margin_top = 213.0
margin_right = 243.0
margin_bottom = 245.0
text = "Testing version | by Danilo Rocha"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="head/Camera/Panel"]
margin_left = 14.0
margin_top = 32.0
margin_right = 243.0
margin_bottom = 148.0
text = "CONTROLS
W A S D move 
SPACE jump
SHIFT sprint
LEFT CLICK fire
CONTROL special"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="head/Camera/Panel"]
margin_left = 14.0
margin_top = 148.0
margin_right = 243.0
margin_bottom = 213.0
text = "GAME
ESC release mouse
R reload level"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health" parent="head/Camera" instance=ExtResource( 3 )]

[node name="healthBar" parent="head/Camera" instance=ExtResource( 4 )]
margin_left = 23.4012
margin_top = 20.0
margin_right = 319.401
margin_bottom = 52.0

[node name="Grappling" type="RayCast" parent="head/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -100 )

[node name="Score" type="Label" parent="head/Camera"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 168.0
margin_top = -48.0
margin_right = 264.0
margin_bottom = -16.0
custom_fonts/font = SubResource( 4 )
text = "200"
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="head/Camera"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -48.0
margin_right = 168.0
margin_bottom = -16.0
custom_fonts/font = SubResource( 5 )
text = "Score:"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="moving" type="Label" parent="head/Camera"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -219.5
margin_top = -128.099
margin_right = 219.5
margin_bottom = -96.0988
grow_horizontal = 2
custom_fonts/font = SubResource( 6 )
text = "keep moving or die"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pause_label" type="Label" parent="head/Camera"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -219.5
margin_top = -198.079
margin_right = 219.5
margin_bottom = -166.079
grow_horizontal = 2
custom_fonts/font = SubResource( 7 )
text = "paused"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icons" type="Control" parent="head/Camera"]
show_behind_parent = true
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1024.0
margin_top = -600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slow_icon" type="Sprite" parent="head/Camera/icons"]
position = Vector2( 928, 544 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="head/Camera/icons/slow_icon"]
margin_left = -329.71
margin_top = -240.0
margin_right = 53.2896
margin_bottom = -138.0
custom_fonts/font = SubResource( 8 )
text = "shift"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="grappling_icon" type="Sprite" parent="head/Camera/icons"]
self_modulate = Color( 0, 0, 0, 1 )
position = Vector2( 936, 456 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 7 )
flip_h = true

[node name="Label2" type="Label" parent="head/Camera/icons/grappling_icon"]
margin_left = -492.947
margin_top = -204.699
margin_right = -367.947
margin_bottom = -45.6995
custom_fonts/font = SubResource( 9 )
text = "E"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="gun_control" type="Control" parent="head/Camera/icons"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -441.635
margin_top = -64.0
margin_right = -200.635
margin_bottom = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gun_state_label" type="Label" parent="head/Camera/icons/gun_control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -137.5
margin_top = -18.6595
margin_right = -36.5
margin_bottom = 0.340515
custom_fonts/font = SubResource( 10 )
text = "single"
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gun_icon" type="Sprite" parent="head/Camera/icons/gun_control/gun_state_label"]
position = Vector2( 0, -8.34058 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 12 )

[node name="Label" type="Label" parent="head/Camera/icons/gun_control/gun_state_label"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -150.979
margin_top = -60.7678
margin_right = -132.979
margin_bottom = -39.7678
custom_fonts/font = SubResource( 11 )
text = "c"
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Control" type="Control" parent="head/Camera"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="headLimit" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, 1.5, 0 )

[node name="Slow_motion_effect" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 8 )
unit_db = 14.0
pitch_scale = 1.49

[node name="Grappling_trigger" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 9 )
unit_db = 14.0

[node name="Shoot_effect" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 10 )

[node name="gun_tic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
[connection signal="changed" from="head/Camera/health" to="head/Camera/healthBar" method="set_value"]
[connection signal="max_changed" from="head/Camera/health" to="head/Camera/healthBar" method="set_max"]
